<resources>
    <string name="app_name">Fault_Report Mockup</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="banner">Service Performance Report</string>
    <string name="logout">Logout</string>

    <string name="report_Fault">Report Fault</string>
    <string name="report_Avail">Report Availability</string>

    <string name="download_Manual">คู่มือสำหรับผู้ใช้บริการ</string>

    <string name="banner_sitemap">Sitemap</string>
    <string name="banner_copyr">Copyright Notice</string>
    <string name="banner_privacy">Privacy Policy</string>


    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_login_but">Login</string>
    <string name="login_question">ส่งคำถาม/คำติชม</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>

    <string name="ddn_fault_rep_header">DDN Fault Report</string>
    <string name="mpls_fault_rep_header">MPLS Fault Report</string>
    <string name="ddn_nationwide_fault_rep_header">DDN Nationwide Fault Report</string>
    <string name="mpls_nationwide_fault_rep_header">MPLS Nationwide Fault Report</string>
    <string name="ipll_fault_rep_header">IPLL Fault Report</string>

    <string name="ddn_avail_rep_header">DDN Availability Report</string>
    <string name="mpls_avail_rep_header">MPLS Availability Report</string>
    <string name="ddn_nationwide_availt_rep_header">DDN Nationwide Availability Report</string>
    <string name="mpls_nationwide_avail_rep_header">MPLS Nationwide Availability Report</string>
    <string name="ipll_avail_rep_header">IPLL Availability Report</string>

    <string name="circuit_no">Circuit No.</string>

    <string name="avail_rep_header">Availability Report</string>

    <string name="profile_header">Profile</string>
    <string name="information">Information</string>
    <string name="name">Username :</string>
    <string name="privilege">Privilege :</string>
    <string name="create_date">Create Date :</string>
    <string name="exp_date">Expire Date :</string>

    <string name="fault_rep_total_down">Total Down :</string>
    <string name="fault_rep_total_true_maintain">Total True Maintain :</string>
    <string name="fault_rep_net_avail">Network Availability (%) :</string>
    <string name="fault_rep_net_avail_true">Network Availability (%) :</string>


    <string name="avail_rep_total_fail">Total Failure :</string>
    <string name="avail_rep_total_avail">Availability (%) :</string>
    <string name="avail_rep_true_min_down">True Minute Down :</string>
    <string name="avail_rep_isa">ISA (%) :</string>

    <string name="ddn_full_fault_report">DDN Full Fault Report</string>
    <string name="mpls_full_fault_report">MPLS Full Fault Report</string>
    <string name="fault_date">Fault Date :</string>
    <string name="circuit_id">Circuit ID :</string>
    <string name="region">Region :</string>
    <string name="rcu">RCU :</string>

    <string name="source">Source :</string>
    <string name="destination">Destination :</string>
    <string name="location">Location :</string>

    <string name="down_time">Down Time :</string>
    <string name="up_time">Up Time :</string>
    <string name="full_total_time">Total Time :</string>
    <string name="full_true_time">True Time :</string>
    <string name="cause">Cause :</string>
    <string name="notes">Notes :</string>
    <string name="group_case">Group - Case :</string>

</resources>
