<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@drawable/summary_shape"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/full_ddn_fault_no_m3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Event No. "
        android:textSize="20sp"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/circuit_id"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>

        <TextView
            android:id="@+id/full_ddn_fault_cir_id_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/region"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_region_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rcu"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_rcu_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_location_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/down_time"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_downtime_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/up_time"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_uptime_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_total_time"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_totaltime_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/full_true_time"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_truetime_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cause"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_cause_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_notes_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/group_case"
            android:layout_weight="1"
            android:textSize="20sp"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/full_ddn_fault_groupcase_m3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text"
            android:textSize="20sp"
            android:textColor="#000000" />
    </LinearLayout>

</LinearLayout>
