<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/gogogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GO"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ede4e1">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/month_fault_m1"
                android:textSize="30sp"
                android:layout_marginBottom="10dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <!-- DDN Fault Report -->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/summary_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/ddn_avail_rep_header"
                    android:textSize="25sp"
                    android:layout_marginBottom="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ddn_fault_total_down_time_m1"
                    android:text="@string/avail_rep_total_fail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/ddn_fault_total_netw_avail_m1"
                    android:text="@string/avail_rep_total_avail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/ddn_fault_total_true_maintain_time_m1"
                    android:text="@string/avail_rep_true_min_down"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />



                <TextView
                    android:id="@+id/ddn_fault_true_maintain_netw_avail_m1"
                    android:text="@string/avail_rep_isa"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </LinearLayout>

            <!-- MPLS Fault Report Month 1-->

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/summary_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical" >

                <TextView
                    android:text="@string/mpls_avail_rep_header"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/mpls_fault_total_down_time_m1"
                    android:text="@string/avail_rep_total_fail"
                    android:textSize="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/mpls_fault_total_netw_avail_m1"
                    android:text="@string/avail_rep_total_avail"
                    android:textSize="20dp"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/mpls_fault_total_true_maintain_time_m1"
                    android:text="@string/avail_rep_true_min_down"
                    android:textSize="20dp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/mpls_fault_true_maintain_netw_avail_m1"
                    android:text="@string/avail_rep_isa"
                    android:textSize="20dp"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </LinearLayout>


            <!-- ddn_nationwide_fault_rep_month1 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/summary_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical" >


                <TextView
                    android:text="@string/ddn_nationwide_availt_rep_header"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/ddn_nationwide_fault_total_down_time_m1"
                    android:text="@string/avail_rep_total_fail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/ddn_nationwide_fault_total_netw_avail_m1"
                    android:text="@string/avail_rep_total_avail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/ddn_nationwide_fault_total_true_maintain_time_m1"
                    android:text="@string/avail_rep_true_min_down"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />



                <TextView
                    android:id="@+id/ddn_nationwide_fault_true_maintain_netw_avail_m1"
                    android:text="@string/avail_rep_isa"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />
            </LinearLayout>

            <!-- MPLS_nationwide_fault_rep_month1 -->
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/summary_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical" >
                <TextView
                    android:text="@string/mpls_nationwide_avail_rep_header"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />
                <TextView
                    android:id="@+id/mpls_nationwide_fault_total_down_time_m1"
                    android:text="@string/avail_rep_total_fail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/mpls_nationwide_fault_total_netw_avail_m1"
                    android:text="@string/avail_rep_total_avail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/mpls_nationwide_fault_total_true_maintain_time_m1"
                    android:text="@string/avail_rep_true_min_down"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />



                <TextView
                    android:id="@+id/mpls_nationwide_fault_true_maintain_netw_avail_m1"
                    android:text="@string/avail_rep_isa"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/summary_shape"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="30dp"
                android:orientation="vertical" >
                <TextView
                    android:text="@string/ipll_avail_rep_header"
                    android:textSize="25dp"
                    android:layout_marginBottom="10dip"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/ipll_nationwide_fault_total_down_time_m1"
                    android:text="@string/avail_rep_total_fail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/ipll_nationwide_fault_total_netw_avail_m1"
                    android:text="@string/avail_rep_total_avail"
                    android:textSize="20sp"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_weight="1" />



                <TextView
                    android:id="@+id/ipll_nationwide_fault_total_true_maintain_time_m1"
                    android:text="@string/avail_rep_true_min_down"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

                <TextView
                    android:id="@+id/ipll_nationwide_fault_true_maintain_netw_avail_m1"
                    android:text="@string/avail_rep_isa"
                    android:textSize="20sp"
                    android:layout_weight="1"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>